RHAIENG-1721: chore(pylocks): add AIPCC-enabled pylock for jupyter/datascience ubi9-python-3.12
Updates jupyter/datascience/ubi9-python-3.12 to use AIPCC (RHOAI 3.3) index:

- Add PYLOCK_FLAVOR=cpu to build-args/cpu.conf
- Update Dockerfile.cpu to use uv.lock.d/pylock.${PYLOCK_FLAVOR}.toml
- Generate pylock.cpu.toml with AIPCC 3.3 index

Dependency version updates for AIPCC compatibility:
- boto3: ~=1.40.52 → ~=1.42.29
- kfp: ~=2.14.6 → ~=2.15.2
- plotly: ~=6.3.1 → ~=6.5.2
- scikit-learn: ~=1.7.2 → ~=1.8.0
- onnxconverter-common: ~=1.13.0 → ~=1.16.0
- psycopg: ~=3.2.10 → ~=3.3.2
- pyodbc: ~=5.2.0 → ~=5.3.0
- mysql-connector-python: ~=9.4.0 → ~=9.5.0

Temporary workarounds (GA blockers created):
- codeflare-sdk commented out (RHAIENG-3039)
- feast downgraded to ~=0.58.0 (RHAIENG-3041)

Override dependencies added:
- python-lsp-server>=1.11.0 (strips [all] extras to avoid AIPCC-8698 conflict)

Jira: RHAIENG-1721

--- a/jupyter/datascience/ubi9-python-3.12/pyproject.toml
+++ b/jupyter/datascience/ubi9-python-3.12/pyproject.toml
@@ -18,7 +18,7 @@ dependencies = [
     "onnxconverter-common~=1.16.0",
     "kubeflow-training==1.9.3",
     # TODO(RHAIENG-3039): Re-enable codeflare-sdk before RHOAI 3.4 GA
-    "codeflare-sdk~=0.34.0; platform_machine != 'ppc64le' and platform_machine != 's390x'",
+    #"codeflare-sdk~=0.34.0; platform_machine != 'ppc64le' and platform_machine != 's390x'",
     # TODO(RHAIENG-3041): Upgrade feast to ~=0.59.0 before RHOAI 3.4 GA
     "feast~=0.58.0",
 
@@ -58,6 +58,7 @@ override-dependencies = [
     # Upstream: https://github.com/elyra-ai/elyra/issues/3325
     "urllib3>=2.6.0",
     # AIPCC-8698: python-lsp-server[all] has conflicting pyflakes/pycodestyle requirements
+    # The [all] extra pulls in linting tools we don't need at runtime
     # Using >= instead of ~= to allow broader compatibility during resolution
     # TODO: Remove this override before RHOAI 3.4 GA once AIPCC-8698 is resolved
     "python-lsp-server>=1.11.0",
