--- a/jupyter/datascience/ubi9-python-3.12/Dockerfile.cpu
+++ b/jupyter/datascience/ubi9-python-3.12/Dockerfile.cpu
@@ -316,6 +316,7 @@ ARG TARGETARCH
 ARG DATASCIENCE_SOURCE_CODE=jupyter/datascience/ubi9-python-3.12
 ARG OPENBLAS_VERSION=0.3.30
 ARG TARGETARCH
+ARG PYLOCK_FLAVOR
 
 LABEL name="odh-notebook-jupyter-datascience-ubi9-python-3.12" \
     summary="Jupyter data science notebook image for ODH notebooks" \
@@ -419,8 +420,8 @@ EOF
 
 USER 1001:0
 
-# Install Python packages and Jupyterlab extensions from pylock.toml
-COPY ${DATASCIENCE_SOURCE_CODE}/pylock.toml ./
+# Install Python packages and Jupyterlab extensions from pylock file
+COPY ${DATASCIENCE_SOURCE_CODE}/uv.lock.d/pylock.${PYLOCK_FLAVOR}.toml ./
 # Copy Elyra setup to utils so that it's sourced at startup
 COPY ${DATASCIENCE_SOURCE_CODE}/setup-elyra.sh ${DATASCIENCE_SOURCE_CODE}/utils ./utils/
 
@@ -435,7 +436,7 @@ if [ "$TARGETARCH" = "ppc64le" ] || [ "$TARGETARCH" = "s390x" ]; then
 
     # first, install pyzmq with our extra flags for libzmq
     # https://github.com/opendatahub-io/notebooks/issues/1172
-    PYZMQ_REQ=$(python3 -c "import tomllib; print(next(f'{p[\"name\"]}=={p[\"version\"]}' for p in tomllib.load(open('pylock.toml', 'rb'))['packages'] if p['name'] == 'pyzmq'))")
+    PYZMQ_REQ=$(python3 -c "import tomllib; print(next(f'{p[\"name\"]}=={p[\"version\"]}' for p in tomllib.load(open('pylock.${PYLOCK_FLAVOR}.toml', 'rb'))['packages'] if p['name'] == 'pyzmq'))")
     GRPC_PYTHON_BUILD_SYSTEM_OPENSSL=1 \
     CFLAGS="${CFLAGS:-} -O3" CXXFLAGS="${CXXFLAGS:-} -O3" \
     uv pip install --strict --no-deps --no-cache --no-config --no-progress \
@@ -450,13 +451,13 @@ if [ "$TARGETARCH" = "ppc64le" ] || [ "$TARGETARCH" = "s390x" ]; then
     uv pip install --strict --no-deps --no-cache --no-config --no-progress \
         --verify-hashes --compile-bytecode --index-strategy=unsafe-best-match \
         --extra-index-url https://pypi.org/simple \
-        --requirements=./pylock.toml
+        --requirements=./pylock.${PYLOCK_FLAVOR}.toml
 else
     # This may have to download and compile some dependencies, and as we don't lock requirements from `build-system.requires`,
     # we often don't know the correct hashes and `--require-hashes` would therefore fail on non amd64, where building is common.
     uv pip install --strict --no-deps --no-cache --no-config --no-progress \
         --verify-hashes --compile-bytecode --index-strategy=unsafe-best-match \
-        --requirements=./pylock.toml
+        --requirements=./pylock.${PYLOCK_FLAVOR}.toml
 fi
 # setup path for runtime configuration
 mkdir /opt/app-root/runtimes
