RHAIENG-1722: chore(pylocks): add AIPCC-enabled pylocks for jupyter/pytorch
Updates Jupyter PyTorch images (CUDA and ROCm) to use AIPCC (RHOAI 3.3) index:

CUDA (jupyter/pytorch/ubi9-python-3.12):
- Add PYLOCK_FLAVOR=cuda to build-args/cuda.conf
- Update Dockerfile.cuda to use uv.lock.d/pylock.${PYLOCK_FLAVOR}.toml
- Remove AIPCC phase 1.5 workaround (PIP_INDEX_URL override)
- Generate pylock.cuda.toml with AIPCC 3.3 CUDA index

ROCm (jupyter/rocm/pytorch/ubi9-python-3.12):
- Add PYLOCK_FLAVOR=rocm to build-args/rocm.conf
- Update Dockerfile.rocm to use uv.lock.d/pylock.${PYLOCK_FLAVOR}.toml
- Remove AIPCC phase 1.5 workaround (PIP_INDEX_URL override)
- Generate pylock.rocm.toml with AIPCC 3.3 ROCm index

PyTorch package updates:
- torch: 2.7.1+cu128/rocm6.3 → 2.9.0 (AIPCC version)
- torchvision: 0.22.1+cu128/rocm6.3 → 0.24.0 (AIPCC version)
- pytorch-triton-rocm → triton~=3.5.0 (ROCm only, AIPCC package name)

Datascience dependency updates (same as RHAIENG-1721):
- boto3, kfp, plotly, scikit-learn, onnxconverter-common, psycopg, pyodbc, mysql-connector-python

Temporary workarounds (GA blockers):
- codeflare-sdk commented out (RHAIENG-3039)
- feast downgraded to ~=0.58.0 (RHAIENG-3041)

Override dependencies:
- python-lsp-server>=1.11.0 (AIPCC-8698)

Jira: RHAIENG-1722

--- a/jupyter/rocm/pytorch/ubi9-python-3.12/pyproject.toml
+++ b/jupyter/rocm/pytorch/ubi9-python-3.12/pyproject.toml
@@ -4,15 +4,15 @@ version = "0.1.0"
 requires-python = "==3.12.*"
 
 dependencies = [
-    # ROCm PyTorch packages
+    # ROCm PyTorch packages (from AIPCC ROCm index)
     "tensorboard~=2.20.0",
-    "torch==2.7.1+rocm6.3",
-    "torchvision==0.22.1+rocm6.3", # https://pytorch.org/get-started/previous-versions/#linux-and-windows-1
-    "pytorch-triton-rocm~=3.3.1",
+    "torch==2.9.0",
+    "torchvision==0.24.0",
+    "triton~=3.5.0",
 
     # Datascience and useful extensions
     # TODO(RHAIENG-3039): Re-enable codeflare-sdk before RHOAI 3.4 GA
-    "codeflare-sdk~=0.34.0",
+    # "codeflare-sdk~=0.34.0",
     # TODO(RHAIENG-3041): Upgrade feast to ~=0.59.0 before RHOAI 3.4 GA
     "feast~=0.58.0",
     "skl2onnx~=1.19.1",
@@ -46,16 +46,7 @@ dependencies = [
 ]
 
 [tool.uv.sources]
-torch = { index = "pytorch-rocm" }
-torchvision = { index = "pytorch-rocm" }
-pytorch-triton-rocm = { index = "pytorch-rocm" }
 odh-notebooks-meta-workbench-datascience-deps = { path = "../../../../dependencies/odh-notebooks-meta-workbench-datascience-deps" }
-
-# Please keep in sync with rocm/ubi9-python-3.12/Dockerfile
-[[tool.uv.index]]
-name = "pytorch-rocm"
-url = "https://download.pytorch.org/whl/rocm6.3"
-explicit = true
 
 [tool.uv]
 environments = [
@@ -66,6 +57,7 @@ override-dependencies = [
     # Upstream: https://github.com/elyra-ai/elyra/issues/3325
     "urllib3>=2.6.0",
     # AIPCC-8698: python-lsp-server[all] has conflicting pyflakes/pycodestyle requirements
+    # The [all] extra pulls in linting tools we don't need at runtime
     # Using >= instead of ~= to allow broader compatibility during resolution
     # TODO: Remove this override before RHOAI 3.4 GA once AIPCC-8698 is resolved
     "python-lsp-server>=1.11.0",
