--- a/jupyter/pytorch/ubi9-python-3.12/pyproject.toml
+++ b/jupyter/pytorch/ubi9-python-3.12/pyproject.toml
@@ -4,14 +4,14 @@ version = "0.1.0"
 requires-python = "==3.12.*"
 
 dependencies = [
-    # PyTorch packages
+    # PyTorch packages (from AIPCC CUDA index)
     "tensorboard~=2.20.0",
-    "torch==2.7.1+cu128",
-    "torchvision==0.22.1+cu128",
+    "torch==2.9.0",
+    "torchvision==0.24.0",
 
     # Datascience and useful extensions
     # TODO(RHAIENG-3039): Re-enable codeflare-sdk before RHOAI 3.4 GA
-    "codeflare-sdk~=0.34.0",
+    # "codeflare-sdk~=0.34.0",
     # TODO(RHAIENG-3041): Upgrade feast to ~=0.59.0 before RHOAI 3.4 GA
     "feast~=0.58.0",
     "skl2onnx~=1.19.1",
@@ -45,8 +45,6 @@ dependencies = [
 ]
 
 [tool.uv.sources]
-torch = {index = "pytorch-cuda"}
-torchvision = {index = "pytorch-cuda"}
 odh-notebooks-meta-workbench-datascience-deps = { path = "../../../dependencies/odh-notebooks-meta-workbench-datascience-deps" }
 
 # https://docs.astral.sh/uv/concepts/indexes/#package-indexes
@@ -64,6 +62,7 @@ override-dependencies = [
     # Upstream: https://github.com/elyra-ai/elyra/issues/3325
     "urllib3>=2.6.0",
     # AIPCC-8698: python-lsp-server[all] has conflicting pyflakes/pycodestyle requirements
+    # The [all] extra pulls in linting tools we don't need at runtime
     # Using >= instead of ~= to allow broader compatibility during resolution
     # TODO: Remove this override before RHOAI 3.4 GA once AIPCC-8698 is resolved
     "python-lsp-server>=1.11.0",
