--- a/runtimes/datascience/ubi9-python-3.12/Dockerfile.cpu
+++ b/runtimes/datascience/ubi9-python-3.12/Dockerfile.cpu
@@ -10,14 +10,6 @@ FROM ${BASE_IMAGE} AS cpu-base
 
 ARG TARGETARCH
 
-### BEGIN RHAIENG-2189: this is AIPCC migration phase 1.5
-ENV PIP_INDEX_URL=https://pypi.org/simple
-# UV_INDEX_URL is deprecated in favor of UV_DEFAULT_INDEX
-ENV UV_INDEX_URL=https://pypi.org/simple
-# https://docs.astral.sh/uv/reference/environment/#uv_default_index
-ENV UV_DEFAULT_INDEX=https://pypi.org/simple
-### END RHAIENG-2189: this is AIPCC migration phase 1.5
-
 WORKDIR /opt/app-root/bin
 
 # OS Packages needs to be installed as root
@@ -375,6 +367,7 @@ FROM cpu-base AS runtime-datascience
 
 ARG TARGETARCH
 ARG DATASCIENCE_SOURCE_CODE=runtimes/datascience/ubi9-python-3.12
+ARG PYLOCK_FLAVOR
 
 LABEL name="odh-notebook-runtime-datascience-ubi9-python-3.12" \
     summary="Runtime data science notebook image for ODH notebooks" \
@@ -423,8 +416,8 @@ fi
 EOF
 
 
-# Install Python packages from pylock.toml
-COPY ${DATASCIENCE_SOURCE_CODE}/pylock.toml ./
+# Install Python packages from pylock file
+COPY ${DATASCIENCE_SOURCE_CODE}/uv.lock.d/pylock.${PYLOCK_FLAVOR}.toml ./pylock.toml
 # Copy Elyra dependencies for air-gapped enviroment
 COPY --chown=1001 ${DATASCIENCE_SOURCE_CODE}/utils ./utils/
 ### BEGIN Download Elyra Bootstrapper
