--- a/runtimes/rocm-pytorch/ubi9-python-3.12/pyproject.toml
+++ b/runtimes/rocm-pytorch/ubi9-python-3.12/pyproject.toml
@@ -6,13 +6,13 @@ requires-python = "==3.12.*"
 dependencies = [
     # ROCm PyTorch packages
     "tensorboard~=2.20.0",
-    "torch==2.7.1+rocm6.3",
-    "torchvision==0.22.1+rocm6.3", # https://pytorch.org/get-started/previous-versions/#linux-and-windows-1
-    "pytorch-triton-rocm~=3.3.1",
+    "torch==2.9.0",
+    "torchvision==0.24.0",
+    "triton~=3.5.0",
 
     # Datascience and useful extensions
     # TODO(RHAIENG-3039): Re-enable codeflare-sdk before RHOAI 3.4 GA
-    "codeflare-sdk~=0.34.0",
+    # "codeflare-sdk~=0.34.0",
     # TODO(RHAIENG-3041): Upgrade feast to ~=0.59.0 before RHOAI 3.4 GA
     "feast~=0.58.0",
     "odh-notebooks-meta-runtime-datascience-deps",
@@ -31,17 +31,8 @@ dependencies = [
 ]
 
 [tool.uv.sources]
-torch = { index = "pytorch-rocm" }
-torchvision = { index = "pytorch-rocm" }
-pytorch-triton-rocm = { index = "pytorch-rocm" }
 odh-notebooks-meta-runtime-elyra-deps = { path = "../../../dependencies/odh-notebooks-meta-runtime-elyra-deps" }
 odh-notebooks-meta-runtime-datascience-deps = { path = "../../../dependencies/odh-notebooks-meta-runtime-datascience-deps" }
-
-# Please keep in sync with rocm/ubi9-python-3.12/Dockerfile
-[[tool.uv.index]]
-name = "pytorch-rocm"
-url = "https://download.pytorch.org/whl/rocm6.3"
-explicit = true
 
 [tool.uv]
 environments = [
