chore: align package versions for AIPCC compatibility across all images
Updates all pyproject.toml files to use AIPCC-compatible package versions:

Package version updates:
- boto3: ~=1.40.52 → ~=1.42.29
- kfp: ~=2.14.6 → ~=2.15.2
- plotly: ~=6.3.1 → ~=6.5.2
- scikit-learn: ~=1.7.2 → ~=1.8.0
- onnxconverter-common: ~=1.13.0 → ~=1.16.0
- psycopg: ~=3.2.10 → ~=3.3.2
- pyodbc: ~=5.2.0 → ~=5.3.0
- mysql-connector-python: ~=9.4.0 → ~=9.5.0

GA Blockers:
- codeflare-sdk: commented out (RHAIENG-3039)
- feast: downgraded to ~=0.58.0 (RHAIENG-3041)

Override dependencies added:
- python-lsp-server>=1.11.0 (AIPCC-8698)

Manifest updates:
- Updated version numbers for all updated packages
- Commented out Codeflare-SDK entries with RHAIENG-3039 reference

Regenerated all pylock.toml files with updated versions.

This prepares the codebase for AIPCC index migration while maintaining
PyPI compatibility.

--- a/jupyter/trustyai/ubi9-python-3.12/pyproject.toml
+++ b/jupyter/trustyai/ubi9-python-3.12/pyproject.toml
@@ -29,25 +29,26 @@ dependencies = [
     "accelerate~=1.12.0; platform_machine != 'ppc64le' and platform_machine != 's390x'",
     "trustyai~=0.6.3",
     # Datascience and useful extensions
-    "boto3~=1.40.52",
+    "boto3~=1.42.29",
     "kafka-python-ng~=2.2.3",
-    "kfp~=2.14.6",
+    "kfp~=2.15.2",
     "matplotlib~=3.10.7", # Should be pinned down to this version in order to be compatible with trustyai < 0.6.3
     "numpy~=2.3.5", # Should be pinned down to this version in order to be compatible with trustyai < 0.6.3
     "pandas~=2.3.3",
-    "plotly~=6.3.1",
-    "scikit-learn~=1.7.2", # Should be pinned down to this version in order to be compatible with trustyai < 0.6.3
+    "plotly~=6.5.2",
+    "scikit-learn~=1.8.0",
     "scipy~=1.16.2",
     "skl2onnx~=1.19.1",
-    "onnxconverter-common~=1.13.0", # Required for skl2onnx, as upgraded version is not compatible with protobuf
+    "onnxconverter-common~=1.16.0",
+    # TODO(RHAIENG-3039): Re-enable codeflare-sdk before RHOAI 3.4 GA
     "codeflare-sdk~=0.34.0; platform_machine != 'ppc64le' and platform_machine != 's390x'",
     "kubeflow-training==1.9.3",
 
     # DB connectors
     "pymongo~=4.15.3",
-    "psycopg~=3.2.10",
-    "pyodbc~=5.2.0",
-    "mysql-connector-python~=9.4.0",
+    "psycopg~=3.3.2",
+    "pyodbc~=5.3.0",
+    "mysql-connector-python~=9.5.0",
 
     # JupyterLab packages
     "odh-elyra==4.3.2",
@@ -78,6 +79,10 @@ override-dependencies = [
     # RHAIENG-2458: CVE-2025-66418 urllib3 decompression vulnerability
     # Upstream: https://github.com/elyra-ai/elyra/issues/3325
     "urllib3>=2.6.0",
+    # AIPCC-8698: python-lsp-server[all] has conflicting pyflakes/pycodestyle requirements
+    # Using >= instead of ~= to allow broader compatibility during resolution
+    # TODO: Remove this override before RHOAI 3.4 GA once AIPCC-8698 is resolved
+    "python-lsp-server>=1.11.0",
 ]
 
 [tool.uv.sources]
