--- a/codeserver/ubi9-python-3.12/pyproject.toml
+++ b/codeserver/ubi9-python-3.12/pyproject.toml
@@ -9,18 +9,20 @@ dependencies = [
     "setuptools~=80.9.0",
 
     # Datascience packages
-    "boto3~=1.40.52",
+    "boto3~=1.42.29",
     "kafka-python-ng~=2.2.3",
     "matplotlib~=3.10.7",
     "numpy~=2.3.5",
     "pandas~=2.3.3",
-    "plotly~=6.3.1",
-    "scikit-learn~=1.7.2",
+    "plotly~=6.5.2",
+    "scikit-learn~=1.8.0",
     "scipy~=1.16.2",
     "skl2onnx~=1.19.1; platform_machine != 's390x'",
+    "onnxconverter-common~=1.16.0",
     "ipykernel~=7.1.0",
     "kubeflow-training==1.9.3",
-    "feast~=0.59.0",
+    # TODO(RHAIENG-3041): Upgrade feast to ~=0.59.0 before RHOAI 3.4 GA
+    "feast~=0.58.0",
 
     # Some extra useful packages
     "opencensus~=0.11.4",
