--- a/runtimes/rocm-tensorflow/ubi9-python-3.12/pyproject.toml
+++ b/runtimes/rocm-tensorflow/ubi9-python-3.12/pyproject.toml
@@ -14,24 +14,24 @@ dependencies = [
     "tensorboard~=2.18.0",
 
     # Datascience and useful extensions
-    "boto3~=1.40.52",
+    "boto3~=1.42.29",
     "kafka-python-ng~=2.2.3",
     "matplotlib~=3.10.7",
     "numpy~=1.26.4",
     "pandas~=2.3.3",
-    "plotly~=6.3.1",
-    "scikit-learn~=1.7.2",
+    "plotly~=6.5.2",
+    "scikit-learn~=1.8.0",
     "scipy~=1.16.2",
     "skl2onnx~=1.19.1",
-    # Required for skl2onnx, as upgraded version is not compatible with protobuf
-    "onnxconverter-common~=1.13.0",
+    "onnxconverter-common~=1.16.0",
+    # TODO(RHAIENG-3039): Re-enable codeflare-sdk before RHOAI 3.4 GA
     "codeflare-sdk~=0.34.0",
 
     # DB connectors
     "pymongo~=4.15.3",
-    "psycopg~=3.2.10",
-    "pyodbc~=5.2.0",
-    "mysql-connector-python~=9.4.0",
+    "psycopg~=3.3.2",
+    "pyodbc~=5.3.0",
+    "mysql-connector-python~=9.5.0",
 
     "odh-notebooks-meta-runtime-elyra-deps",
 
