fix(tekton): add resource requests to convert-compression task
The task was getting OOM-killed while pulling large CUDA images.
Add memory requests (4Gi) and limits (8Gi) to prevent this.

--- a/.tekton/base-image-multiarch-push-pipeline.yaml
+++ b/.tekton/base-image-multiarch-push-pipeline.yaml
@@ -446,6 +446,12 @@ spec:
           echo -n "${NEW_DIGEST}" > "$(results.IMAGE_DIGEST.path)"
 
           echo "[$(date --utc -Ins)] Compression conversion complete"
+        resources:
+          requests:
+            memory: 4Gi
+            cpu: 500m
+          limits:
+            memory: 8Gi
         securityContext:
           capabilities:
             add:
