fix(tekton): update IMAGE_URL param to use convert-compression task results

--- a/.tekton/base-image-multiarch-pull-request-pipeline.yaml
+++ b/.tekton/base-image-multiarch-pull-request-pipeline.yaml
@@ -17,7 +17,7 @@ spec:
   - name: show-sbom
     params:
     - name: IMAGE_URL
-      value: $(tasks.build-image-index.results.IMAGE_URL)
+      value: $(tasks.convert-compression.results.IMAGE_URL)
     taskRef:
       params:
       - name: name
