feat(tekton): add taskRunSpecs for resource allocation in multiple pipelines
- Enhanced `convert-compression` and `clair-scan` tasks with resource requests and limits.
- Added resource specifications for `ecosystem-cert-preflight-checks` in applicable pipelines.

--- a/.tekton/odh-base-image-rocm-6-3-py312-c9s-pull-request.yaml
+++ b/.tekton/odh-base-image-rocm-6-3-py312-c9s-pull-request.yaml
@@ -42,6 +42,14 @@ spec:
     value: .
   # Added taskRunSpecs to increase compute resources
   taskRunSpecs:
+    - pipelineTaskName: convert-compression
+      computeResources:
+        requests:
+          cpu: '2'
+          memory: 16Gi
+        limits:
+          cpu: '4'
+          memory: 32Gi
     - pipelineTaskName: clair-scan
       computeResources:
         requests:
