--- a/.tekton/odh-base-image-rocm-6-4-py312-ubi9-pull-request.yaml
+++ b/.tekton/odh-base-image-rocm-6-4-py312-ubi9-pull-request.yaml
@@ -43,6 +43,14 @@ spec:
 
   # Added taskRunSpecs to increase compute resources
   taskRunSpecs:
+    - pipelineTaskName: convert-compression
+      computeResources:
+        requests:
+          cpu: '2'
+          memory: 16Gi
+        limits:
+          cpu: '4'
+          memory: 32Gi
     - pipelineTaskName: clair-scan
       computeResources:
         requests:
@@ -59,7 +67,6 @@ spec:
         limits:
           cpu: '8'
           memory: 32Gi
-
   pipelineRef:
     name: base-image-multiarch-pull-request-pipeline
   taskRunTemplate:
