RHAIENG-1721: chore(pyproject.tomls): deduplicate datascience deps as much as possible to better deal with AIPCC-9537

--- a/codeserver/ubi9-python-3.12/pyproject.toml
+++ b/codeserver/ubi9-python-3.12/pyproject.toml
@@ -8,21 +8,14 @@ dependencies = [
     "wheel~=0.45.1",
     "setuptools~=80.9.0",
 
-    # Datascience packages
-    "boto3~=1.42.29",
-    "kafka-python-ng~=2.2.3",
-    "matplotlib~=3.10.7",
-    "numpy~=2.3.5",
-    "pandas~=2.3.3",
-    "plotly~=6.5.2",
-    "scikit-learn~=1.8.0",
-    "scipy~=1.16.2",
-    "skl2onnx~=1.19.1; platform_machine != 's390x'",
-    "onnxconverter-common~=1.16.0",
     "ipykernel~=7.1.0",
-    "kubeflow-training==1.9.3",
+
+    # Datascience packages
     # TODO(RHAIENG-3041): Upgrade feast to ~=0.59.0 before RHOAI 3.4 GA
     "feast~=0.58.0",
+    # RHAIENG-1475: skl2onnx excluded on s390x for codeserver
+    "skl2onnx~=1.19.1; platform_machine != 's390x'",
+    "odh-notebooks-meta-workbench-datascience-deps",
 
     # Some extra useful packages
     "opencensus~=0.11.4",
@@ -41,3 +34,5 @@ override-dependencies = [
     # Upstream: https://github.com/kubernetes-client/python/issues/2458
     "urllib3>=2.6.0",
 ]
+[tool.uv.sources]
+odh-notebooks-meta-workbench-datascience-deps = { path = "../../dependencies/odh-notebooks-meta-workbench-datascience-deps" }
