--- a/jupyter/datascience/ubi9-python-3.12/pyproject.toml
+++ b/jupyter/datascience/ubi9-python-3.12/pyproject.toml
@@ -5,31 +5,12 @@ requires-python = "==3.12.*"
 
 dependencies = [
     # Datascience and useful extensions
-    "boto3~=1.42.29",
-    "kafka-python-ng~=2.2.3",
-    "kfp~=2.15.2",
-    # AIPCC-9537: kfp in AIPCC 3.3 has stripped dependency metadata
-    # Adding all missing deps that are available in AIPCC:
-    "docstring-parser~=0.17.0",
-    "google-api-core~=2.28.1",
-    "google-cloud-storage~=3.7.0",
-    "kfp-pipeline-spec~=2.15.2",
-    "kfp-server-api~=2.15.2",
-    "requests-toolbelt~=1.0.0",
-    # NOTE: click-option-group==0.5.7 is required by kfp but NOT in AIPCC index
-    "matplotlib~=3.10.7",
-    "numpy~=2.3.5",
-    "pandas~=2.3.3",
-    "plotly~=6.5.2",
-    "scikit-learn~=1.8.0",
-    "scipy~=1.16.2",
-    "skl2onnx~=1.19.1",
-    "onnxconverter-common~=1.16.0",
-    "kubeflow-training==1.9.3",
     # TODO(RHAIENG-3039): Re-enable codeflare-sdk before RHOAI 3.4 GA
     #"codeflare-sdk~=0.34.0; platform_machine != 'ppc64le' and platform_machine != 's390x'",
     # TODO(RHAIENG-3041): Upgrade feast to ~=0.59.0 before RHOAI 3.4 GA
     "feast~=0.58.0",
+    "skl2onnx~=1.19.1",
+    "odh-notebooks-meta-workbench-datascience-deps",
 
     # DB connectors
     "pymongo~=4.15.3",
@@ -72,3 +53,5 @@ override-dependencies = [
     # TODO: Remove this override before RHOAI 3.4 GA once AIPCC-8698 is resolved
     "python-lsp-server>=1.11.0",
 ]
+[tool.uv.sources]
+odh-notebooks-meta-workbench-datascience-deps = { path = "../../../dependencies/odh-notebooks-meta-workbench-datascience-deps" }
