--- a/jupyter/trustyai/ubi9-python-3.12/pyproject.toml
+++ b/jupyter/trustyai/ubi9-python-3.12/pyproject.toml
@@ -28,21 +28,12 @@ dependencies = [
     "datasets~=4.4.1",
     "accelerate~=1.12.0; platform_machine != 'ppc64le' and platform_machine != 's390x'",
     "trustyai~=0.6.3",
+
     # Datascience and useful extensions
-    "boto3~=1.42.29",
-    "kafka-python-ng~=2.2.3",
-    "kfp~=2.15.2",
-    "matplotlib~=3.10.7", # Should be pinned down to this version in order to be compatible with trustyai < 0.6.3
-    "numpy~=2.3.5", # Should be pinned down to this version in order to be compatible with trustyai < 0.6.3
-    "pandas~=2.3.3",
-    "plotly~=6.5.2",
-    "scikit-learn~=1.8.0",
-    "scipy~=1.16.2",
-    "skl2onnx~=1.19.1",
-    "onnxconverter-common~=1.16.0",
     # TODO(RHAIENG-3039): Re-enable codeflare-sdk before RHOAI 3.4 GA
     "codeflare-sdk~=0.34.0; platform_machine != 'ppc64le' and platform_machine != 's390x'",
-    "kubeflow-training==1.9.3",
+    "skl2onnx~=1.19.1",
+    "odh-notebooks-meta-workbench-datascience-deps",
 
     # DB connectors
     "pymongo~=4.15.3",
@@ -88,6 +79,7 @@ override-dependencies = [
 [tool.uv.sources]
 torch = { index = "pytorch-cuda" }
 triton = { index = "pytorch-cuda" }
+odh-notebooks-meta-workbench-datascience-deps = { path = "../../../dependencies/odh-notebooks-meta-workbench-datascience-deps" }
 
 [[tool.uv.index]]
 name = "pytorch-cuda"
