chore(dockerfile): update CUDA 12.8 and 12.9 base images to add libs that AIPCC ships

--- a/base-images/cuda/13.0/c9s-python-3.12/Dockerfile.cuda
+++ b/base-images/cuda/13.0/c9s-python-3.12/Dockerfile.cuda
@@ -131,6 +131,16 @@ ENV XLA_FLAGS=--xla_gpu_cuda_data_dir=/usr/local/cuda
 RUN dnf -y install cuda-toolkit-13-0 && \
     dnf -y clean all --enablerepo="*"
 
+# Install additional CUDA libraries needed by PyTorch
+# cuda-cupti: CUDA Profiling Tools Interface (libcupti.so)
+# libcusparselt0: cuSPARSELt for structured sparsity (libcusparseLt.so)
+# libcudss0-cuda-12: cuDSS direct sparse solver (libcudss.so)
+RUN dnf -y install \
+    cuda-cupti-13-0 \
+    libcusparselt0 \
+    libcudss0-cuda-12 \
+    && dnf -y clean all --enablerepo="*"
+
 # Restore user workspace
 USER 1001
 WORKDIR /opt/app-root/src
