--- a/base-images/cuda/12.8/ubi9-python-3.12/Dockerfile.cuda
+++ b/base-images/cuda/12.8/ubi9-python-3.12/Dockerfile.cuda
@@ -127,6 +127,17 @@ RUN dnf install -y \
 # Set this flag so that libraries can find the location of CUDA
 ENV XLA_FLAGS=--xla_gpu_cuda_data_dir=/usr/local/cuda
 
+# Install additional CUDA libraries needed by PyTorch
+# cuda-cupti: CUDA Profiling Tools Interface (libcupti.so)
+# libcusparselt0: cuSPARSELt for structured sparsity (libcusparseLt.so)
+# libcudss0-cuda-12: cuDSS direct sparse solver (libcudss.so)
+RUN dnf -y install \
+    cuda-cupti-12-8 \
+    libcusparselt0 \
+    libcudss0-cuda-12 \
+    && dnf clean all \
+    && rm -rf /var/cache/yum/*
+
 # Restore user workspace
 USER 1001
 WORKDIR /opt/app-root/src
