RHAIENG-3059: migrate to PYLOCK_FLAVOR for dynamic lockfile selection across all images
Standardize Dockerfiles and build-args to use `PYLOCK_FLAVOR` for dynamic lockfile resolution (`uv.lock.d/pylock.<flavor>.toml`) across minimal, datascience, codeserver, and runtime images. Remove deprecated `pylock.toml` references and obsolete AIPCC phase 1.5 overrides (`PIP_INDEX_URL`, `UV_INDEX_URL`). Includes updates to support CPU, ROCm, and CUDA flavors.

--- a/jupyter/minimal/ubi9-python-3.12/build-args/konflux.rocm.conf
+++ b/jupyter/minimal/ubi9-python-3.12/build-args/konflux.rocm.conf
@@ -3,3 +3,4 @@
 # Architectures: linux/x86_64
 # Source       : https://quay.io/repository/aipcc/base-images/rocm
 BASE_IMAGE=quay.io/aipcc/base-images/rocm-6.4-el9.6:3.3.0-1768412209
+PYLOCK_FLAVOR=rocm
