--- a/jupyter/datascience/ubi9-python-3.12/Dockerfile.konflux.cpu
+++ b/jupyter/datascience/ubi9-python-3.12/Dockerfile.konflux.cpu
@@ -316,6 +316,7 @@ ARG TARGETARCH
 ARG DATASCIENCE_SOURCE_CODE=jupyter/datascience/ubi9-python-3.12
 ARG OPENBLAS_VERSION=0.3.30
 ARG TARGETARCH
+ARG PYLOCK_FLAVOR
 
 LABEL name="rhoai/odh-workbench-jupyter-datascience-cpu-py312-rhel9" \
       com.redhat.component="odh-workbench-jupyter-datascience-cpu-py312-rhel9" \
@@ -417,8 +418,8 @@ EOF
 
 USER 1001:0
 
-# Install Python packages and Jupyterlab extensions from pylock.toml
-COPY ${DATASCIENCE_SOURCE_CODE}/pylock.toml ./
+# Install Python packages and Jupyterlab extensions from pylock file
+COPY ${DATASCIENCE_SOURCE_CODE}/uv.lock.d/pylock.${PYLOCK_FLAVOR}.toml ./
 # Copy Elyra setup to utils so that it's sourced at startup
 COPY ${DATASCIENCE_SOURCE_CODE}/setup-elyra.sh ${DATASCIENCE_SOURCE_CODE}/utils ./utils/
 
@@ -430,18 +431,31 @@ echo "Installing software and packages"
 if [ "$TARGETARCH" = "ppc64le" ] || [ "$TARGETARCH" = "s390x" ]; then
     # We need special flags and environment variables when building packages
     # aipcc does not have some dependencies to build cryptography==43.0.3 on ppc64le, so we need to use pypi.org/simple
+
+    # first, install pyzmq with our extra flags for libzmq
+    # https://github.com/opendatahub-io/notebooks/issues/1172
+    PYZMQ_REQ=$(python3 -c "import tomllib; print(next(f'{p[\"name\"]}=={p[\"version\"]}' for p in tomllib.load(open('pylock.${PYLOCK_FLAVOR}.toml', 'rb'))['packages'] if p['name'] == 'pyzmq'))")
+    GRPC_PYTHON_BUILD_SYSTEM_OPENSSL=1 \
+    CFLAGS="${CFLAGS:-} -O3" CXXFLAGS="${CXXFLAGS:-} -O3" \
+    uv pip install --strict --no-deps --no-cache --no-config --no-progress \
+        --verify-hashes --compile-bytecode --index-strategy=unsafe-best-match \
+        --extra-index-url https://pypi.org/simple \
+        "${PYZMQ_REQ}"
+
+    # next, install everything else
+    # this is because matplotlib depends on pybind11 which won't build if we define `undefined`
     GRPC_PYTHON_BUILD_SYSTEM_OPENSSL=1 \
     CFLAGS="-O3" CXXFLAGS="-O3" \
     uv pip install --strict --no-deps --no-cache --no-config --no-progress \
         --verify-hashes --compile-bytecode --index-strategy=unsafe-best-match \
         --extra-index-url https://pypi.org/simple \
-        --requirements=./pylock.toml
+        --requirements=./pylock.${PYLOCK_FLAVOR}.toml
 else
     # This may have to download and compile some dependencies, and as we don't lock requirements from `build-system.requires`,
     # we often don't know the correct hashes and `--require-hashes` would therefore fail on non amd64, where building is common.
     uv pip install --strict --no-deps --no-cache --no-config --no-progress \
         --verify-hashes --compile-bytecode --index-strategy=unsafe-best-match \
-        --requirements=./pylock.toml
+        --requirements=./pylock.${PYLOCK_FLAVOR}.toml
 fi
 # setup path for runtime configuration
 mkdir /opt/app-root/runtimes
