--- a/runtimes/datascience/ubi9-python-3.12/Dockerfile.konflux.cpu
+++ b/runtimes/datascience/ubi9-python-3.12/Dockerfile.konflux.cpu
@@ -10,14 +10,6 @@ FROM ${BASE_IMAGE} AS cpu-base
 
 ARG TARGETARCH
 
-### BEGIN RHAIENG-2189: this is AIPCC migration phase 1.5
-ENV PIP_INDEX_URL=https://pypi.org/simple
-# UV_INDEX_URL is deprecated in favor of UV_DEFAULT_INDEX
-ENV UV_INDEX_URL=https://pypi.org/simple
-# https://docs.astral.sh/uv/reference/environment/#uv_default_index
-ENV UV_DEFAULT_INDEX=https://pypi.org/simple
-### END RHAIENG-2189: this is AIPCC migration phase 1.5
-
 WORKDIR /opt/app-root/bin
 
 # OS Packages needs to be installed as root
@@ -375,6 +367,7 @@ FROM cpu-base AS runtime-datascience
 
 ARG TARGETARCH
 ARG DATASCIENCE_SOURCE_CODE=runtimes/datascience/ubi9-python-3.12
+ARG PYLOCK_FLAVOR
 
 WORKDIR /opt/app-root/bin
 USER 0
@@ -413,8 +406,8 @@ fi
 EOF
 
 
-# Install Python packages from pylock.toml
-COPY ${DATASCIENCE_SOURCE_CODE}/pylock.toml ./
+# Install Python packages from pylock file
+COPY ${DATASCIENCE_SOURCE_CODE}/uv.lock.d/pylock.${PYLOCK_FLAVOR}.toml ./pylock.toml
 # Copy Elyra dependencies for air-gapped enviroment
 COPY --chown=1001 ${DATASCIENCE_SOURCE_CODE}/utils ./utils/
 ### BEGIN Download Elyra Bootstrapper
@@ -434,6 +427,16 @@ if [ "$TARGETARCH" = "ppc64le" ]; then
     uv pip install --strict --no-deps --no-cache --no-config --no-progress --verify-hashes --compile-bytecode --index-strategy=unsafe-best-match --requirements=./pylock.toml
 elif [ "$TARGETARCH" = "s390x" ]; then
     # For s390x, we need special flags and environment variables for building packages
+
+    # first, install pyzmq with our extra flags for libzmq
+    # https://github.com/opendatahub-io/notebooks/issues/1172
+    PYZMQ_REQ=$(python3 -c "import tomllib; print(next(f'{p[\"name\"]}=={p[\"version\"]}' for p in tomllib.load(open('pylock.toml', 'rb'))['packages'] if p['name'] == 'pyzmq'))")
+    GRPC_PYTHON_BUILD_SYSTEM_OPENSSL=1 \
+    CFLAGS="${CFLAGS:-} -O3" CXXFLAGS="${CXXFLAGS:-} -O3" \
+    uv pip install --strict --no-deps --no-cache --no-config --no-progress --verify-hashes --compile-bytecode --index-strategy=unsafe-best-match "${PYZMQ_REQ}"
+
+    # next, install everything else
+    # this is because matplotlib depends on pybind11 which won't build if we define `undefined`
     GRPC_PYTHON_BUILD_SYSTEM_OPENSSL=1 \
     CFLAGS="-O3" CXXFLAGS="-O3" \
     uv pip install --strict --no-deps --no-cache --no-config --no-progress --verify-hashes --compile-bytecode --index-strategy=unsafe-best-match --requirements=./pylock.toml
