chore(dockerfile): add runtime dependencies for PyTorch (openmpi, qhull, snappy) across CUDA/ROCm base images

--- a/base-images/cuda/12.8/ubi9-python-3.12/Dockerfile.cuda
+++ b/base-images/cuda/12.8/ubi9-python-3.12/Dockerfile.cuda
@@ -138,6 +138,17 @@ RUN dnf -y install \
     && dnf clean all \
     && rm -rf /var/cache/yum/*
 
+# Runtime dependencies for PyTorch packages (libmpi_cxx.so, libqhull_r.so, libsnappy.so)
+# These packages are not in UBI9 base repos, add EPEL temporarily
+RUN dnf -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-9.noarch.rpm && \
+    dnf -y install \
+    openmpi \
+    qhull \
+    snappy \
+    && dnf -y remove epel-release \
+    && dnf clean all \
+    && rm -rf /var/cache/yum/*
+
 # Restore user workspace
 USER 1001
 WORKDIR /opt/app-root/src
