--- a/base-images/rocm/6.4/c9s-python-3.12/Dockerfile.rocm
+++ b/base-images/rocm/6.4/c9s-python-3.12/Dockerfile.rocm
@@ -82,6 +82,15 @@ EOF
 
 RUN ldconfig
 
+# Runtime dependencies for PyTorch packages (libmpi_cxx.so, libqhull_r.so, libsnappy.so)
+# qhull is in CRB (Code Ready Builder) repo
+RUN dnf config-manager --set-enabled crb && \
+    dnf -y install \
+    openmpi \
+    qhull \
+    snappy \
+    && dnf -y clean all --enablerepo="*"
+
 # Restore user workspace
 USER 1001
 WORKDIR /opt/app-root/src
