--- a/base-images/rocm/6.4/c9s-python-3.12/Dockerfile.rocm
+++ b/base-images/rocm/6.4/c9s-python-3.12/Dockerfile.rocm
@@ -86,11 +86,11 @@ EOF
 RUN ldconfig
 
 # Runtime dependencies for PyTorch packages (libmpi_cxx.so, libqhull_r.so, libsnappy.so)
-# qhull is in CRB (Code Ready Builder) repo
+# libqhull is in CRB (Code Ready Builder) repo
 RUN dnf config-manager --set-enabled crb && \
     dnf -y install \
     openmpi \
-    qhull \
+    libqhull_r \
     snappy \
     && dnf -y clean all --enablerepo="*"
 
